welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: '<-' expected but integer literal found.
	for(c1 1 to 5) {
               ^MethodsPicture:34: error: illegal start of simple expression
}
^