welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV(c:Color){
	setCouleurBrosse(c)
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	droite()
	avance()
	baisseBrosse()
	leveBrosse()
	droite()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	
}

override def run() {
	faireV(Color.YELLOW)
	faireV(Color.RED)
	faireV(Color.BLUE)
	faireV(Color.GREEN)

	for(c1 1 to 5) {
		avance()
	}

}
